# cellpainting_241101onco

./: README.md  pyproject.toml
data/241101_oncocross_mcf7/: plate_map.xlsx
notebooks/: 1-intro.ipynb
