[project]
name = "cellpainting-241101onco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.72",
    "falsecolor>=1.1.4.9",
    "huggingface-hub>=0.26.3",
    "jupyter>=1.1.1",
    "microfilm>=0.2.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "s3fs>=0.4.2",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
